# cookbooks

./: .gitignore  LICENSE  benchmark.py  build_output.txt  generate_dashboard.py  index.html  main.py  metrics_analysis.ipynb  monitor.py  ollama_client.py  ollama_list.txt  optimizer.py  out.txt  power.ipynb  pyproject.toml  requirements.txt  reset_logs.py  setup.py  structure.md  test_model_ph3mini.ipynb
cli/: cli.py
configs/: model_config.json  model_config.py
cook/: main.py
cook/analyzers/: prompt_analyzer.py
cook/cli/: __init__.py  commands.py
cook/core/: benchmark.py  monitor.py  ollama_client.py  optimizer.py
cook/reporters/: chart_generator.py  html_reporter.py
cook/utils/: file_utils.py
logs/: results.csv
